[project]
name = "nordpool2influxdb"
version = "0.0.1"
authors = ["Heikki Partanen <heikki.partanen@gmail.com>"]
description = "Service for collecting data from nordpool API and delivering it to InfluxDB"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[project.scripts]
mcchecker = "nordpool2influxdb.nordpool2influxdb:run"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[[tool.mypy.overrides]]
module = [
    "influxdb"
]
ignore_missing_imports = true
